--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       align-items: center;
       font-family: "Arial", sans-serif;
 
-      background-image: url("bg.jpg"); /* your background image */
+      background-image: url("bg.jpeg"); /* your background image */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
