--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ button {
   <h1>YAAAY 💘</h1>
   <h1> YOU MADE MY DAY Ritika ❤️</h1>
   <p>You are officially stuck with me 😌</p>
-  <img src="photo.jpeg" alt="Us">
+  <img src="bg.jpeg" alt="Us">
 </div>
 
 <script>
